tests/pass/ForLoop.java
package pass;

public class ForLoop {
	public int forLoop(int acc) {
		acc = 0;
		for (int i = 0; i < 5; i++) {
			acc = acc + i;
		}
		return acc;
	}

}
